k8s-ftp-server-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: taipyio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: taipyio
  name: ftp-app-server
spec:
  selector:
    matchLabels:
      app: ftp-app-server
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ftp-app-server
    spec:
      containers:
        - name: ftp-app-server-pod
          image: fauria/vsftpd:latest
          resources:
            requests:
              cpu: "2"
              memory: "2048"
            limits:
              cpu: "4"
              memory: "4096"
          ports:
            - containerPort: 21
              protocol: TCP
              name: "ftp-port"
          volumeMounts:
            - mountPath: "/home/vsftpd"
              name: pv-storage
      volumes:
        - name: pv-storage
          persistentVolumeClaim:
            claimName: pv-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: taipyio
  name: ftp-app-server-service
  labels:
    app: ftp-app-server
spec:
  ports:
    - port: 21
      targetPort: 21
      protocol: TCP
  selector:
    app: ftp-app-server
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: taipyio
  name: ftp-http-ingress
spec:
  defaultBackend:
    service:
      name: ftp-app-server-service
      port:
        number: 21
